# single-cell-nextflow-pipeline

./: .gitignore  README.md  pyproject.toml
config/: config.yml
nextflow/: main.nf  nextflow.config
nextflow/modules/: run_analysis.nf
notebooks/: test.ipynb
src/: clustering.py  pipeline.py  preprocessing.py  run_pipeline.py
src/data/: dataloader.py
src/models/: base.py  pca.py  scvi.py
src/utils/: decorator.py  error.py  logger.py
