[project]
name = "single-cell-nextflow-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "igraph>=1.0.0",
    "leidenalg>=0.12.0",
    "nextflow>=26.4.3",
    "pyyaml>=6.0.3",
    "ruff>=0.15.17",
    "scanpy>=1.11.5",
    "scikit-misc>=0.5.2",
]
